--- a/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
@@ -114,7 +114,7 @@ layout:decorator="'layout/LayoutPadrao'">
 					   <div class="col-xs-12 col-sm-6 form-group">
 					     <div class="input-group">
 					        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-					  		<input id="email" placeholder="E-mail" class="form-control" type="email"/>
+					  		<input id="email" placeholder="E-mail" class="form-control" type="email" th:value="${contato.id}" th:field="*{contato.email}"/>
 					     </div>
 					   </div>
 						<div class="col-xs-12 col-sm-3 form-group">
