Task - Atualização validaçao, criação pesquiar cliente, validação campo.

--- a/gerenciadorClin/src/main/resources/templates/funcionario/cadastroFuncionario.html
+++ b/gerenciadorClin/src/main/resources/templates/funcionario/cadastroFuncionario.html
@@ -70,7 +70,7 @@ layout:decorator="'layout/LayoutPadrao'">
                          <div class="col-xs- 12 col-sm-12 form-group">
                            <div class="input-group">
                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                           <input id="fullName" name="Nome Funcionário" placeholder="Nome Colaborador" class="form-control" required="true" value="" type="text">
+                           <input id="fnNome" name="Nome Funcionário" placeholder="Nome Colaborador" class="form-control" required="true" value="" type="text">
                          </div>
                          </div>
 					<div class="col-xs-6 col-sm-2 form-group">
