--- a/gerenciadorClin/src/main/resources/templates/cliente/pesquisarClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/pesquisarClientes.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt" xmlns="http://www.w3.org/1999/xhtml"
-xmlns:th="http://www.thymeleaf.org"
-xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-layout:decorator="'layout/LayoutPadrao'">
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorator="'layout/LayoutPadrao'">
 <head>
 <title>Pesquisa de Clientes</title>
 </head>
 <body>
-		<section class="aw-layout-content  js-content" layout:fragment="conteudo">
+	<section class="aw-layout-content  js-content"
+		layout:fragment="conteudo">
 
-				<div class="page-header top-fix">
-					<div class="container-fluid">
-						<h1>
-							Pesquisa de Clientes
-						</h1>
+		<div class="page-header top-fix">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-sm-10">
+						<h1>Pesquisa de Clientes</h1>
+					</div>
+					<div class="col-sm-2">
+						<div clas="aw-page-header-controls">
+							<a class="btn btn default" th:href="@{/clientes/novo}"> <i class="fas fa-user-plus"></i><span
+								class="hiddens-xs hidden-sm">Novo Cliente</span>
+							</a>
+						</div>
 					</div>
 				</div>
-				
-	<div class="container-fluid">
-				
-			
-				<div class="row">
-					
-				</div>
-	</div>
-	
+			</div>
+		</div>
 
-</section>
+		<div class="container-fluid">
+
+
+			<div class="row"></div>
+		</div>
+
+
+	</section>
 </body>
 </html>
