--- a/gerenciadorClin/src/main/resources/templates/layout/LayoutPadrao.html
+++ b/gerenciadorClin/src/main/resources/templates/layout/LayoutPadrao.html
@@ -13,6 +13,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/vendors.min.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/algaworks.min.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/application.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/brewer.css}"/>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link href="https://file.myfontastic.com/uaAmW452BbydAuKZHRzAUg/icons.css" rel="stylesheet">
 
