Task - tela pesquisarcliente

--- a/gerenciadorClin/src/main/resources/templates/cliente/cadastrarClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/cadastrarClientes.html
@@ -162,7 +162,7 @@ xmlns:brewer="http://Cli.gerencidador.com">
 				 </div>
 			  
 				  <div class="col-xs-12 col-sm-2 form-group">
-				   	<label for="nome" class="control-label">UFp</label>
+				   	<label for="nome" class="control-label">UF</label>
 				     <div class="input-group">
 				        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
 				  		<input id="UF" class="form-control"  type="text" placeholder="UF"/>
