--- a/gerenciadorClin/src/main/resources/templates/cliente/pesquisarClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/pesquisarClientes.html
@@ -13,13 +13,14 @@
 		<div class="page-header top-fix">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-sm-10">
+				   <div class="col-sm-10">
 						<h1>Pesquisa de Clientes</h1>
 					</div>
 					<div class="col-sm-2">
+						<br>
 						<div clas="aw-page-header-controls">
-							<a class="btn btn default" th:href="@{/clientes/novo}"> <i class="fas fa-user-plus"></i><span
-								class="hiddens-xs hidden-sm">Novo Cliente</span>
+							<a class="btn  btn-primary" th:href="@{/clientes/novo}"> <i class="fas fa-user-plus"></i><span
+								class="hiddens-xs hidden-sm">  Novo Cliente</span>
 							</a>
 						</div>
 					</div>
@@ -28,8 +29,6 @@
 		</div>
 
 		<div class="container-fluid">
-
-
 			<div class="row"></div>
 		</div>
 
