--- a/gerenciadorClin/src/main/resources/templates/layout/fragmentos/menuLateral.html
+++ b/gerenciadorClin/src/main/resources/templates/layout/fragmentos/menuLateral.html
@@ -35,7 +35,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
           </a>
 
           <ul class="aw-menu__list  aw-menu__list--sublist">
-            <li class="aw-menu__item  aw-menu__item--link"><a href="pagina-vazia.html">Cadastro de Cliente</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a th:href="@{/clientes/novo}">Cadastro de Cliente</a></li>
             <li class="aw-menu__item  aw-menu__item--link"><a href="login.html">Cadastro de Funcionário</a></li>
             <li class="aw-menu__item  aw-menu__item--link"><a href="esqueceu-a-senha.html">Cadastro de Produto</a></li>
           </ul>
